# vulkan_execises

./: .gitignore  CMakeLists.txt  readme.md
common/: common.h
projects/cmakeTest/: CMakeLists.txt
projects/cmakeTest/src/: main.cpp
projects/cmake_notes/: readme.md
projects/draw_model/: CMakeLists.txt  readme.md
projects/draw_model/shaders/: vert.spv
projects/draw_model/src/: HelloModel.cpp  HelloModel.h  main.cpp
projects/draw_triangle/: CMakeLists.txt  readme.md
projects/draw_triangle/shaders/: draw_triangle.frag  draw_triangle.vert  vert.spv
projects/draw_triangle/src/: HelloTriangleApp.cpp  HelloTriangleApp.h  main.cpp
projects/testProject1/: CMakeLists.txt
projects/testProject1/src/: main.cpp
testProject1/: testProject1.sln
testProject1/Debug/: testProject1.ilk
testProject1/testProject1/: main.cpp  testProject1.vcxproj
testProject1/testProject1/Debug/: vc141.idb
testProject1/testProject1/Debug/testProject1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testProject1.lastbuildstate
triangle/: triangle.sln
triangle/triangle/: triangle.cpp  triangle.vcxproj
